# OpenGUI

./: .gitmodules  CMakeLists.txt
example/: example.cpp  example.hpp  imgui.ini  main.cpp
example/layout/: default.gui  default.yaml
include/OpenGUI/: Application.hpp  Context.hpp  Element.hpp  Layout.hpp  OpenGUI.hpp
src/: application.cpp  element.cpp  layout.cpp
